# computer101

./: README.md  pyproject.toml
file_system_ops/: commands
file_system_ops/pets/cats/: fluffy.txt  luna_the_cat.txt  puzzle.txt
file_system_ops/pets/dogs/: griffin.txt  spot.txt  teddy.txt  toto.txt
notebooks/: py123.ipynb
