[project]
name = "computer101"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia268238", email = "sophia268238@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
]
